# easy-python

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: deploy.yml
appendix/bnf/: index.html
appendix/errors/: index.html
appendix/pep8/: index.html
appendix/stdlib/: index.html
chapter01/: index.html
chapter02/: index.html
chapter03/: index.html
chapter04/: index.html
chapter05/: index.html
chapter06/: index.html
chapter07/: index.html
chapter08/: index.html
chapter09/: index.html
chapter10/: index.html
chapter11/: index.html
chapter12/: index.html
chapter13/: index.html
chapter14/: index.html
chapter15/: index.html
chapter16/: index.html
chapter17/: index.html
chapter18/: index.html
chapter19/: index.html
chapter20/: index.html
docs/: chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter20.md  index.md
docs/appendix/: bnf.md  errors.md  pep8.md  stdlib.md
docs/part1/: chapter01.md  chapter02.md
docs/part2/: chapter03.md  chapter04.md
docs/part3/: chapter05.md  chapter06.md  chapter07.md
docs/part4/: chapter08.md  chapter09.md  chapter10.md
docs/part5/: chapter11.md  chapter12.md  chapter13.md  chapter14.md
docs/part6/: chapter15.md  chapter16.md  chapter17.md
docs/part7/: chapter18.md  chapter19.md  chapter20.md
docs/part8/: chapter21.md  (+1 more)
search/: search_index.json
